# gs2

./: Makefile  Makefile.depend  Makefile.diagnostics  Makefile.new  Makefile.target_gs2  Makefile.tests_and_benchmarks  Makefile.tests_common  Makefile.tests_root_common  README  README.newmake  STATUS  additional_terms.f90  analytical_falpha.f90  antenna.f90  antenna_data.f90  benchmarks.f90  centering.f90  check_sgi.f90  collisions.f90  collisions.fpp  command_line_darwin.f90  constants.f90  convert_input.f90  define.inc  dist_fn.f90  dist_fn.fpp  dist_fn_arrays.f90  dist_fn_arrays.fpp  eigval.fpp  fft_work_fftw.f90  fft_work_stub.f90  fields.f90  fields_arrays.f90  fields_explicit.f90  fields_explicit.fpp  fields_gf_local.f90  fields_implicit.f90  fields_local.f90  fields_test.f90  file_utils.f90  (+91 more)
6.0.0/: eigval.fpp  fields_local.f90  hyper.f90  parameter_scan.f90
Aux/: generate_fftw_wisdom.fpp
Makefiles/: Makefile.ALPHA  Makefile.BLUEGENE  Makefile.BlueGene  Makefile.C90  Makefile.HDF5  Makefile.HOSTNAME_ALPHA  Makefile.HOSTNAME_ALPHA_nag  Makefile.HOSTNAME_C90  Makefile.HOSTNAME_LINUX_abs  Makefile.HOSTNAME_LINUX_alpha  Makefile.HOSTNAME_LINUX_fuj  Makefile.HOSTNAME_LINUX_g95  Makefile.HOSTNAME_LINUX_ifort_cambridge  Makefile.HOSTNAME_LINUX_lf95  Makefile.HOSTNAME_LINUX_nag  Makefile.HOSTNAME_ORIGIN  Makefile.HOSTNAME_UKAFF  Makefile.LINUX  Makefile.LINUX_ifort  Makefile.LINUX_nag  Makefile.N8HPC  Makefile.ORIGIN  Makefile.RS6000  Makefile.T3E  Makefile.XT4  Makefile.abs  Makefile.andes  Makefile.archer  Makefile.archer_LA  Makefile.bassi  Makefile.bluejoule  Makefile.compaq  Makefile.cray  Makefile.debian  Makefile.g95  Makefile.gfortran  Makefile.gnu-g95  Makefile.gnu-gcc  Makefile.gnu-gfortran  Makefile.helios  (+14 more)
Outputs/: eik.out  eik2.out  grid.out
append_old_netcdf/: dist_fn.fpp  gs2.fpp  gs2_gryfx_zonal.f90  gs2_init.rb  gs2_layouts.fpp  gs2_main.fpp  gs2_reinit.f90  gs2_transforms.fpp  init_g.f90  kt_grids.f90  nonlinear_terms.fpp  overrides.f90  overrides.rb  run_parameters.f90  species.f90  unit_tests.f90
benchmarks/: Makefile  Makefile.tests_common
diagnostics/: diagnostics_antenna.f90  diagnostics_ascii.f90  diagnostics_calculate.f90  diagnostics_config.f90  diagnostics_create_and_write.f90  diagnostics_dimensions.f90  diagnostics_fields.f90  diagnostics_final_routines.f90  diagnostics_fluxes.fpp  diagnostics_geometry.f90  diagnostics_heating.f90  diagnostics_metadata.f90  diagnostics_moments.f90  diagnostics_omega.f90  diagnostics_screen_printout.f90  diagnostics_turbulence.f90  diagnostics_write_fields.f90  diagnostics_write_fluxes.f90  diagnostics_write_omega.f90  fields_parallelization.f90  generate_diagnostics_ascii.rb  generate_diagnostics_config.rb  generate_diagnostics_create_and_write.rb  gs2_diagnostics_new.f90  volume_averages.f90
diagnostics/simpledataio/: Makefile.am  Makefile.in  README.md  acinclude.m4  configure  configure.ac
diagnostics/simpledataio/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.1t  traces.2
diagnostics/simpledataio/include/: definitions.h  simpledataio.h
diagnostics/simpledataio/src/: generate_simpledataio_write.rb  simpledataio.c  simpledataio_read.F90  simpledataiof.F90  simpledataiof.F95
diagnostics/simpledataio/test/: test_parallelf.f90
documentation/: adaptivedt1.eps  dg_explicit_scheme.tex
explicit_flow_shear/: Makefile  Makefile.depend  Makefile.tests_root_common  collisions.fpp  fields.f90  fields_implicit.f90  fields_local.f90  functional_tests.fpp  gs2_io.fpp  kt_grids.f90  species.f90
fix_trinity_interface/: Makefile  Makefile.depend  Makefile.target_gs2  dist_fn.fpp  fields.f90  fields_implicit.f90  fields_local.f90  gs2.fpp  gs2_diagnostics.fpp  gs2_init.f90  gs2_init.rb  gs2_layouts.fpp  gs2_main.fpp  gs2_save.fpp  hyper.f90  init_g.f90  le_grids.f90  nonlinear_terms.fpp  overrides.f90  parameter_scan.f90  species.f90  theta_grid.f90  theta_grid_params.f90  unit_tests.f90
geo/: Makefile  ball.f90  ceq.f90  deq.f90  eeq.f90  eik.in  et.f90  generate_read_chease.rb  geometry.f90  geometry_c_interface.c  geq.fpp  ideq.f90  leq.f90  peq.f90  peq.fpp  read_chease.f90
geo_local/: geometry.f90  leq.f90  read_chease.f90
gridgen/: Makefile  eik2.out  gingrid  grid.input.out  grid.lambda.out  gridgen.200  rungridgen.f90  test_os
gs2/tags/release-2.0/geo/: Makefile.in  configure.in  eeq.f90  fort.25  nstub.f90  peq.f90  veq.f90
gs2/trunk/diagnostics/simpledataio/: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
gs2/trunk/diagnostics/simpledataio/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.1t  traces.2
gs2/trunk/diagnostics/simpledataio/include/: definitions.h
gs2/trunk/diagnostics/simpledataio/src/: generate_simpledataio_read.rb  generate_simpledataio_write.rb  simpledataio.c  simpledataio_write.F90  simpledataio_write.f90  simpledataiof.F90
gs2/trunk/diagnostics/simpledataio/test/: testf.f90
linear_tests/: Makefile
long_dim_names/: Makefile  Makefile.depend  gs2_io.fpp
new_diagnostics_no_autotools/: Makefile  Makefile.depend  Makefile.diagnostics  collisions.fpp  dist_fn.fpp  gs2_diagnostics.fpp  le_grids.f90
no_autotools/: Makefile  Makefile.diagnostics  Makefile.target_gs2  Makefile.tests_and_benchmarks  Makefile.tests_root_common  nonlinear_terms.fpp
optimisation_module/: Makefile.target_gs2  antenna.f90  dist_fn.fpp  fields.f90  fields_implicit.f90  fields_local.f90  gs2_init.f90  gs2_init.rb  gs2_layouts.fpp  gs2_main.fpp  gs2_optimisation.f90  gs2_reinit.f90  gs2_transforms.fpp  ingen_mod.fpp  kt_grids.f90  overrides.f90  overrides.rb  run_parameters.f90
release_candidate/: Makefile  gs2.fpp  (+10 more)
utils/: FreeIPC.f90  FreeIPC_c.c  FreeIPC_create.tmpl  Makefile  Makefile.in  configure.in  constants.fpp  fft_work.fpp  file_utils.fpp  gauss_quad.f90  hdf_wrapper.fpp  lnblank.f  matrix_inverse.f90  mds.fpp  mds_io.f90  mds_io_stub.f90  mdslib.f90  mp.fpp  ran.fpp  redistribute.f90  shm_mpi3.f90  shm_mpi3_alloc_tmpl.inc  shm_mpi3_get_node_pointer_tmpl.inc  sorting.f90  spfunc.fpp  spl.f90
(+1823 files in other folders)
